Resultados de experimentos com os diferentes índices das radiossondas
Alterações no pré processamento, e inclusão de 2 novos csv's

--- a/RAW/CDS_api.ipynb
+++ b/RAW/CDS_api.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -22,14 +22,15 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "<pygrib._pygrib.open at 0x1c54d45d2e0>"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pygrib'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\pedro\\OneDrive\\Documentos\\GitHub\\atmoseer\\RAW\\CDS_api.ipynb Célula: 2\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pedro/OneDrive/Documentos/GitHub/atmoseer/RAW/CDS_api.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pedro/OneDrive/Documentos/GitHub/atmoseer/RAW/CDS_api.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcollections\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mabc\u001b[39;00m \u001b[39mimport\u001b[39;00m Mapping\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pedro/OneDrive/Documentos/GitHub/atmoseer/RAW/CDS_api.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpygrib\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pedro/OneDrive/Documentos/GitHub/atmoseer/RAW/CDS_api.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mxarray\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mxr\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pedro/OneDrive/Documentos/GitHub/atmoseer/RAW/CDS_api.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/ERA-5/RJ_2021.grib\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m#example filename\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pygrib'"
+          ]
         }
       ],
       "source": [
@@ -6481,7 +6482,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.13 ('base')",
+      "display_name": "Python 3.9.13 64-bit (microsoft store)",
       "language": "python",
       "name": "python3"
     },
@@ -6499,7 +6500,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "aea149784bd30735ce6bf75b9a5314843328adf2083b944f20623ef50c2ca00d"
+        "hash": "7cae96f122c592e726571a12b43bcd9f03b52c1ebe31bae2d78de8233825e767"
       }
     }
   },
