Create script prepare_datasets

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "1cde9351",
+   "id": "d8bd987a",
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "18a7a954",
+   "id": "17eb9a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,7 +1946,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "0551038a",
+   "id": "c67df207",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "4d8d5718",
+   "id": "dea9dce1",
    "metadata": {},
    "outputs": [
     {
@@ -3140,44 +3140,6 @@
    "metadata": {},
    "source": [
     "# Merge dataframes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "1d83ba57",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    datetime  value other_value\n",
-      "0 2022-01-01      1           a\n",
-      "1 2022-01-03      3           b\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# create example dataframes\n",
-    "df1 = pd.DataFrame({'datetime': ['2022-01-01 00:00:00', '2022-01-02 00:00:00', '2022-01-03 00:00:00'],\n",
-    "                    'value': [1, 2, 3]})\n",
-    "\n",
-    "df2 = pd.DataFrame({'datetime': ['2022-01-01 00:00:00', '2022-01-03 00:00:00'],\n",
-    "                    'other_value': ['a', 'b']})\n",
-    "\n",
-    "# convert datetime columns to datetime format\n",
-    "df1['datetime'] = pd.to_datetime(df1['datetime'])\n",
-    "df2['datetime'] = pd.to_datetime(df2['datetime'])\n",
-    "\n",
-    "# merge dataframes on datetime column\n",
-    "merged_df = pd.merge(df1, df2, on='datetime', how='inner')\n",
-    "\n",
-    "print(merged_df)\n"
    ]
   },
   {
@@ -6741,7 +6703,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b5b5a791",
+   "id": "a82fe055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6759,7 +6721,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "356d5839",
+   "id": "52db12e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6770,7 +6732,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "a4dd7eb1",
+   "id": "8acca5cf",
    "metadata": {},
    "outputs": [
     {
@@ -6796,7 +6758,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "8796b168",
+   "id": "f06092c8",
    "metadata": {},
    "outputs": [
     {
@@ -6816,7 +6778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6058294c",
+   "id": "375be193",
    "metadata": {},
    "source": [
     "# Load ERA5 data"
@@ -6825,7 +6787,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "f19210f5",
+   "id": "54b40df7",
    "metadata": {},
    "outputs": [
     {
@@ -7017,7 +6979,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "c7059d5d",
+   "id": "ceabfe27",
    "metadata": {},
    "outputs": [
     {
@@ -7057,7 +7019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "058faf8b",
+   "id": "20db5376",
    "metadata": {},
    "source": [
     "# Analyse preprocessed (parquet) files"
@@ -7066,7 +7028,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "0e74f54d",
+   "id": "734f7923",
    "metadata": {},
    "outputs": [
     {
@@ -7189,7 +7151,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "4794f158",
+   "id": "b178610d",
    "metadata": {},
    "outputs": [
     {
@@ -7210,7 +7172,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "b27478f7",
+   "id": "025328b5",
    "metadata": {},
    "outputs": [
     {
@@ -7412,7 +7374,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "29d5283e",
+   "id": "fe7ac377",
    "metadata": {},
    "outputs": [
     {
@@ -7433,7 +7395,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "38fbfe6a",
+   "id": "826f450b",
    "metadata": {},
    "outputs": [
     {
@@ -7680,7 +7642,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "cf60c5fd",
+   "id": "a54d9232",
    "metadata": {},
    "outputs": [
     {
@@ -7701,7 +7663,7 @@
   {
    "cell_type": "code",
    "execution_count": 352,
-   "id": "439d1681",
+   "id": "12a8f756",
    "metadata": {},
    "outputs": [
     {
@@ -7725,7 +7687,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "9908f8f8",
+   "id": "7ab72aa1",
    "metadata": {},
    "outputs": [
     {
@@ -7978,7 +7940,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "e33afc71",
+   "id": "85c92def",
    "metadata": {},
    "outputs": [
     {
@@ -8047,7 +8009,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "25f9ca71",
+   "id": "6a235861",
    "metadata": {},
    "outputs": [
     {
@@ -8069,7 +8031,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "c565f46e",
+   "id": "00be2d7c",
    "metadata": {},
    "outputs": [
     {
@@ -8138,7 +8100,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "eaf2cfeb",
+   "id": "37c8a8c8",
    "metadata": {},
    "outputs": [
     {
@@ -8447,8 +8409,184 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 390,
+   "id": "85dedb0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TEM_MAX</th>\n",
+       "      <th>PRE_MAX</th>\n",
+       "      <th>UMD_MAX</th>\n",
+       "      <th>wind_u</th>\n",
+       "      <th>wind_v</th>\n",
+       "      <th>CHUVA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-05-18 18:00:00</th>\n",
+       "      <td>23.8</td>\n",
+       "      <td>1010.1</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>3.195429</td>\n",
+       "      <td>3.308963</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-18 19:00:00</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>1010.4</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>4.449593</td>\n",
+       "      <td>3.232819</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-19 11:00:00</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>1013.2</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>-0.240726</td>\n",
+       "      <td>-0.319454</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-19 12:00:00</th>\n",
+       "      <td>23.9</td>\n",
+       "      <td>1013.5</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>-0.873266</td>\n",
+       "      <td>0.217730</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-05-19 13:00:00</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1013.9</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>3.342952</td>\n",
+       "      <td>2.008648</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 19:00:00</th>\n",
+       "      <td>23.9</td>\n",
+       "      <td>1003.7</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>-1.499772</td>\n",
+       "      <td>-0.026179</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 20:00:00</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1003.3</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>-3.160603</td>\n",
+       "      <td>0.500590</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 21:00:00</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1003.5</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>-2.896026</td>\n",
+       "      <td>0.151774</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 22:00:00</th>\n",
+       "      <td>24.4</td>\n",
+       "      <td>1003.7</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>-2.183602</td>\n",
+       "      <td>-0.268113</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31 23:00:00</th>\n",
+       "      <td>24.3</td>\n",
+       "      <td>1004.5</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>-1.891037</td>\n",
+       "      <td>0.651136</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>117670 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     TEM_MAX  PRE_MAX  UMD_MAX    wind_u    wind_v  CHUVA\n",
+       "Datetime                                                                 \n",
+       "2007-05-18 18:00:00     23.8   1010.1     87.0  3.195429  3.308963    0.0\n",
+       "2007-05-18 19:00:00     23.3   1010.4     88.0  4.449593  3.232819    0.0\n",
+       "2007-05-19 11:00:00     23.6   1013.2     77.0 -0.240726 -0.319454    0.0\n",
+       "2007-05-19 12:00:00     23.9   1013.5     82.0 -0.873266  0.217730    0.0\n",
+       "2007-05-19 13:00:00     25.0   1013.9     74.0  3.342952  2.008648    0.0\n",
+       "...                      ...      ...      ...       ...       ...    ...\n",
+       "2021-12-31 19:00:00     23.9   1003.7     92.0 -1.499772 -0.026179    0.4\n",
+       "2021-12-31 20:00:00     24.0   1003.3     91.0 -3.160603  0.500590    0.2\n",
+       "2021-12-31 21:00:00     24.0   1003.5     89.0 -2.896026  0.151774    0.2\n",
+       "2021-12-31 22:00:00     24.4   1003.7     88.0 -2.183602 -0.268113    0.0\n",
+       "2021-12-31 23:00:00     24.3   1004.5     88.0 -1.891037  0.651136    0.0\n",
+       "\n",
+       "[117670 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 390,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df[['TEM_MAX', 'PRE_MAX', 'UMD_MAX', 'wind_u', 'wind_v', 'CHUVA']]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "08be7e75",
+   "id": "3700cb2a",
    "metadata": {},
    "source": [
     "# Análise de correlações"
@@ -8457,7 +8595,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "97c3921e",
+   "id": "fdc85844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8471,7 +8609,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "id": "c74a77e6",
+   "id": "00f41923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8508,7 +8646,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "56d97d95",
+   "id": "e260a0af",
    "metadata": {},
    "outputs": [
     {
@@ -8649,7 +8787,7 @@
   {
    "cell_type": "code",
    "execution_count": 361,
-   "id": "2214935e",
+   "id": "93646f3a",
    "metadata": {},
    "outputs": [
     {
@@ -8670,7 +8808,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
-   "id": "a83d4bee",
+   "id": "89f3921b",
    "metadata": {},
    "outputs": [
     {
@@ -8792,7 +8930,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "1999e86e",
+   "id": "b46ada18",
    "metadata": {},
    "outputs": [
     {
@@ -8813,7 +8951,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "037b959b",
+   "id": "52eab7e2",
    "metadata": {},
    "outputs": [
     {
@@ -8935,7 +9073,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "117ec024",
+   "id": "b516c576",
    "metadata": {},
    "outputs": [
     {
@@ -8956,7 +9094,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "e5c97c16",
+   "id": "32c6c0ef",
    "metadata": {},
    "outputs": [
     {
@@ -9078,7 +9216,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "bb186a23",
+   "id": "4108abeb",
    "metadata": {},
    "outputs": [
     {
@@ -9099,7 +9237,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "6c207ef9",
+   "id": "77fb6580",
    "metadata": {},
    "outputs": [
     {
@@ -9171,7 +9309,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "990275f3",
+   "id": "4ef17551",
    "metadata": {},
    "outputs": [
     {
@@ -9192,7 +9330,7 @@
   {
    "cell_type": "code",
    "execution_count": 370,
-   "id": "93cb2969",
+   "id": "8e2a1ce2",
    "metadata": {
     "scrolled": true
    },
@@ -9278,7 +9416,7 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "id": "09cc097d",
+   "id": "7c95e248",
    "metadata": {},
    "outputs": [
     {
@@ -9299,7 +9437,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "d88c4fa1",
+   "id": "f46ae116",
    "metadata": {},
    "outputs": [
     {
@@ -9413,7 +9551,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "38967476",
+   "id": "0f5b2958",
    "metadata": {},
    "outputs": [
     {
@@ -9434,7 +9572,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "73326e3b",
+   "id": "bf0b8e3c",
    "metadata": {},
    "outputs": [
     {
@@ -9518,7 +9656,7 @@
   {
    "cell_type": "code",
    "execution_count": 375,
-   "id": "24f51278",
+   "id": "02acc7af",
    "metadata": {},
    "outputs": [
     {
@@ -9539,7 +9677,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "2ac5c7e7",
+   "id": "ea3e0b4a",
    "metadata": {},
    "outputs": [
     {
@@ -9623,7 +9761,7 @@
   {
    "cell_type": "code",
    "execution_count": 377,
-   "id": "37e3db1f",
+   "id": "f8fa04aa",
    "metadata": {},
    "outputs": [
     {
@@ -9644,7 +9782,7 @@
   {
    "cell_type": "code",
    "execution_count": 378,
-   "id": "052774b9",
+   "id": "bdd11498",
    "metadata": {},
    "outputs": [
     {
@@ -9767,7 +9905,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "e6207fc1",
+   "id": "fc98ea7f",
    "metadata": {},
    "outputs": [
     {
@@ -9787,7 +9925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d83891",
+   "id": "ef746f99",
    "metadata": {},
    "source": [
     "## Sumários estatísticos"
@@ -9796,7 +9934,7 @@
   {
    "cell_type": "code",
    "execution_count": 380,
-   "id": "2f914a87",
+   "id": "466959cf",
    "metadata": {},
    "outputs": [
     {
@@ -9948,7 +10086,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "id": "f63dcf4c",
+   "id": "b02c3c4e",
    "metadata": {},
    "outputs": [
     {
@@ -10091,7 +10229,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "id": "637c4964",
+   "id": "5ddc8c7f",
    "metadata": {},
    "outputs": [
     {
@@ -10234,7 +10372,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "13310264",
+   "id": "faee2757",
    "metadata": {},
    "outputs": [
     {
@@ -10377,7 +10515,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "79c02476",
+   "id": "14000527",
    "metadata": {},
    "outputs": [
     {
@@ -10483,7 +10621,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "d08cd754",
+   "id": "877ad88e",
    "metadata": {},
    "outputs": [
     {
@@ -10598,7 +10736,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "id": "a234cf02",
+   "id": "3065cb8d",
    "metadata": {},
    "outputs": [
     {
@@ -10741,7 +10879,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "e72b905a",
+   "id": "7e3cbe52",
    "metadata": {},
    "outputs": [
     {
@@ -10856,7 +10994,7 @@
   {
    "cell_type": "code",
    "execution_count": 388,
-   "id": "e1ded4ee",
+   "id": "8201ede0",
    "metadata": {},
    "outputs": [
     {
@@ -10971,7 +11109,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "68d306ac",
+   "id": "5b8a0544",
    "metadata": {},
    "outputs": [
     {
